# libmutablestring

./: .gitignore  Makefile.am  README.md  configure.ac
doc/: Doxyfile  Makefile.am
src/: Makefile.am  TODO  configure.h  configure.h.in  mutablestring.c  mutablestring.h
tests/: Makefile.am  mutable_string_append.c  mutable_string_append_c.c  mutable_string_compare.c  mutable_string_copy.c  mutable_string_escape.c  mutable_string_new.c  mutable_string_new_len  mutable_string_new_len.c  mutable_string_new_str_len.c  test_common.h
